# fastrace-reqwest

./: Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: ci.yml
examples/: client.rs  server.rs
src/: lib.rs
