[package]
name = "fastrace-reqwest"
version = "0.1.1"

categories = ["development-tools::debugging"]
description = "A reqwest util for propagating trace context for fastrace"
keywords = ["tracing", "fastrace", "reqwest", "traceparent", "propagation"]
readme = "README.md"

edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/fast/fastrace-reqwest"
rust-version = "1.80"

[dependencies]
fastrace = "0.7"
reqwest = "0.12"

[dev-dependencies]
axum = "0.8"
fastrace = { version = "0.7", features = ["enable"] }
fastrace-axum = { git = "https://github.com/fast/fastrace-axum" }
tokio = { version = "1.44", features = ["full"] }
